# brown

./: Cargo.toml  README.md  key.pub  key.txt
notes/: 0_0_8.md  0_0_9.md  0_1_0.md  lib_common_errors.md
src/: assets.rs  bro.rs  core.rs  helper.rs  lib.rs  main.rs  test_helper.rs  testing.rs
src/bro/: clone_dir_structure.rs  copy_dir_structure.rs  create_dir.rs  create_dir_all.rs  create_dir_brute.rs  create_dir_structure.rs  create_file.rs  create_file_brute.rs  dir_structure_to_string.rs  direntries_to_path.rs  direntry_to_path.rs  direntry_to_path_all.rs  get_dirs.rs  get_dirs_all.rs  get_dirs_multi.rs  get_entries.rs  get_ext.rs  get_file_name.rs  get_files.rs  get_files_by_ext.rs  get_level.rs  get_read_dir.rs  is_dir.rs  is_file.rs  mod.rs  path_exists.rs  remove_dir.rs  remove_dir_brute.rs  remove_file.rs  testing.rs  write_file.rs  write_to_file.rs
src/bro_path/: mod.rs
src/brown_error/: mod.rs
src/err/: mod.rs
tests/: allow_alphabets_only.rs  buildup.rs  buildup_test.rs  copy_dir_structure_test.rs  create_delete_dir.rs  create_delete_file.rs  create_delete_files.rs  create_delete_files_non_safe.rs  create_delete_files_safe.rs  create_dir_structure_test.rs  dir_structure_to_string_real.rs  dir_structure_to_string_test.rs  dir_structure_to_string_test_great.rs  direntry_to_path_all_test.rs  first.rs  foo2.txt  get_dir_dir_test.md  get_dir_level_test.rs  get_dir_test.rs  get_entries_test.rs  get_files_by_ext_test.rs  get_files_test.rs  get_level_test.rs  index.html  last.rs  navbar_test.rs  second.rs  setup.rs  small_fns.rs  tasks_indexes_tdd.rs
(+16 files in other folders)
