[package]
name = "brown"
version = "0.0.1"
edition = "2021"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "Rust Task Runner"

repository = "https://github.com/skillzaa/brown.git"

homepage = "https://github.com/skillzaa/brown.git"

license = "MIT OR Apache-2.0"
readme = "README.md"
doctest = true

[lib]
name = "brown"
test = false
bench = false


[dependencies]