[package]
name = "brown"
version = "0.0.6"
edition = "2021"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "A simple library that makes dealing with Rust file system a breeze"

repository = "https://github.com/skillzaa/brown.git"

homepage = "https://github.com/skillzaa/brown.git"

license = "MIT OR Apache-2.0"
readme = "README.md"
doctest = true

[dependencies]
thiserror = "1.0"